crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__complex__parse_multiple_here_docs.snap
---
source: cash-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cmd <<EOF1 <<EOF2\nfirst\nEOF1\nsecond\nEOF2\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(HereDocument(None, IoHereDocument(
                    requires_expansion: true,
                    here_end: Word(
                      value: "EOF1",
                      loc: "[location]",
                    ),
                    doc: Word(
                      value: "first\n",
                      loc: "[location]",
                    ),
                  ))),
                  IoRedirect(HereDocument(None, IoHereDocument(
                    requires_expansion: true,
                    here_end: Word(
                      value: "EOF2",
                      loc: "[location]",
                    ),
                    doc: Word(
                      value: "second\n",
                      loc: "[location]",
                    ),
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
