crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__complex__parse_parameter_expansion_complex.snap
---
source: cash-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo \"${var:-default}\" \"${var:+alt}\" \"${var:=assign}\"",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "\"${var:-default}\"",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "\"${var:+alt}\"",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "\"${var:=assign}\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
