crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__complex__parse_shebang_and_program.snap
---
source: cash-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "#!/usr/bin/env bash\n\nfor f in A B C; do\n\n    # sdfsdf\n    echo \"${f@L}\" >&2\n\n   done\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ForClause(ForClauseCommand(
                variable_name: "f",
                values: Some([
                  Word(
                    value: "A",
                    loc: "[location]",
                  ),
                  Word(
                    value: "B",
                    loc: "[location]",
                  ),
                  Word(
                    value: "C",
                    loc: "[location]",
                  ),
                ]),
                body: DoGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "\"${f@L}\"",
                                loc: "[location]",
                              )),
                              IoRedirect(File(None, DuplicateOutput, Duplicate(Word(
                                value: "2",
                                loc: "[location]",
                              )))),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
